<resources>
  <string name="app_name">MaterialCompat</string>


  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="app_title">MaterialCompat</string>
  <string name="action_base_widgets">Widgets</string>
  <string name="title_base_widgets">Base Widgets</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="navigation_item_1">Item 1</string>
  <string name="navigation_item_2">Item 2</string>
  <string name="navigation_subheader">Sub Header</string>
  <string name="navigation_sub_item_1">Sub Item 1</string>
  <string name="navigation_sub_item_2">Sub Item 2</string>
  <string name="nav_widgets">Widgets</string>
  <string name="nav_ctoolbar">ToolBar</string>
  <string name="title_activity_collapsing_tool_bar">CollapsingToolBarActivity</string>

  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
</resources>
