<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_item_widgets"
      android:icon="@android:drawable/ic_menu_agenda"
      android:title="@string/nav_widgets"/>
    <item
      android:id="@+id/nav_item_ctoolbar"
      android:icon="@android:drawable/ic_menu_always_landscape_portrait"
      android:title="@string/nav_ctoolbar"/>
    <item
      android:id="@+id/navigation_subheader"
      android:title="@string/navigation_subheader">
      <menu>
        <item
          android:id="@+id/navigation_sub_item_1"
          android:checked="true"
          android:icon="@android:drawable/ic_dialog_email"
          android:title="@string/navigation_sub_item_1"/>
        <item
          android:id="@+id/navigation_sub_item_2"
          android:icon="@android:drawable/ic_dialog_map"
          android:title="@string/navigation_sub_item_2"/>
      </menu>
    </item>
  </group>
</menu>